feat: PinEntity 변수 추가, 게시글 수정 메소드 연동 완료